force-app/main/default/objects/Design_Phase__c/Design_Phase__c.object-meta.xml
<CustomObject>
    <label>設計フェーズ</label>
    <nameField>
        <label>フェーズ名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>設計フェーズ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>