force-app/main/default/objects/Design_Phase__c/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <label>実績終了日</label>
    <type>Date</type>
</CustomField>