force-app/main/default/objects/Design_Phase__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <label>実績開始日</label>
    <type>Date</type>
</CustomField>