force-app/main/default/objects/Design_Phase__c/fields/Design_Project__c.field-meta.xml
<CustomField>
    <fullName>Design_Project__c</fullName>
    <label>設計開発プロジェクト</label>
    <type>MasterDetail</type>
    <referenceTo>Design_Project__c</referenceTo>
    <relationshipLabel>設計フェーズ</relationshipLabel>
    <relationshipName>Design_Phases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>