force-app/main/default/objects/Design_Phase__c/fields/Gate_Date__c.field-meta.xml
<CustomField>
    <fullName>Gate_Date__c</fullName>
    <label>ゲートレビュー実施日</label>
    <type>Date</type>
</CustomField>