force-app/main/default/objects/Design_Phase__c/fields/Gate_Result__c.field-meta.xml
<CustomField>
    <fullName>Gate_Result__c</fullName>
    <label>ゲートレビュー結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>合格</fullName>
            </value>
            <value>
                <fullName>条件付合格</fullName>
            </value>
            <value>
                <fullName>差戻し</fullName>
            </value>
            <value>
                <fullName>未実施</fullName>
                <default>true</default>
                <label>未実施</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>