force-app/main/default/objects/Design_Phase__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>備考</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>