force-app/main/default/objects/Design_Phase__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>フェーズ責任者</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>担当設計フェーズ</relationshipLabel>
    <relationshipName>Design_Phases_Owner</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>