force-app/main/default/objects/Design_Phase__c/fields/Phase_Order__c.field-meta.xml
<CustomField>
    <fullName>Phase_Order__c</fullName>
    <label>表示順</label>
    <required>true</required>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>