force-app/main/default/objects/Design_Phase__c/fields/Planned_End__c.field-meta.xml
<CustomField>
    <fullName>Planned_End__c</fullName>
    <label>計画終了日</label>
    <type>Date</type>
</CustomField>